# KrystalliumPowerGenerator

./: .gitignore  README.md  main.py  pyproject.toml  setup_virtual_serial.sh
arduino/DoomsdayLightController/: DoomsdayLightController.ino
krystallium/: __init__.py  component.py  samples.py
