[tool.poetry]
name = "krystalliumpowergenerator"
version = "0.1.0"
description = "Power generator for Krystalium"
authors = ["Arjen Hiemstra <ahiemstra@heimr.nl>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "^2.6.0"
pyserial = "^3.5"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
